# para-cada

./: README.md  TODO.md  pyproject.toml
cada/: __main__.py  core.py  printer.py  xpath.py
docs/: _config.yml  examples.md  index.md  reference.md  tutorial.md
docs/assets/css/: style.scss
scripts/: release.nu
site/: index.html
tests/: test_cli.py  test_xpath.py  utils.py
tests/addons/: startup.py
