[tool.poetry]
name = "para-cada-docs"
version = "0.1.0"
description = ""
authors = ["Grzegorz Krason <grzegorz.krason@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
